--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
     <title>المرصد المساعد لخدمات الأعمال - RSG Assam</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
     <style>
+        /* Comprehensive cleanup for any pseudo elements */
         * {
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+        }
+
+        *:not(.menu-toggle):not(.menu-item):not(.fas):not(.fab):before,
+        *:not(.menu-toggle):not(.menu-item):not(.fas):not(.fab):after {
+            content: "" !important;
+            display: none !important;
+            visibility: hidden !important;
+        }
+
+        html {
+            overflow-x: hidden;
         }
 
         body {
@@ -18,12 +30,23 @@
             color: #333;
             background: #ffffff;
             min-height: 100vh;
+            overflow-x: hidden;
+            position: relative;
+        }
+
+        body::before,
+        body::after,
+        html::before,
+        html::after {
+            display: none !important;
+            content: "" !important;
+            visibility: hidden !important;
         }
 
         .container {
             max-width: 1400px;
             margin: 0 auto;
-            padding: 0 40px;
+            padding: 0 20px;
         }
 
         /* Compact Circular Menu */
@@ -217,12 +240,29 @@
             display: none;
         }
 
-        /* Hero Section */
+        /* Hide any stray content that might appear */
+        .page::before,
+        .page::after,
+        section::before,
+        section::after,
+        .hero::before,
+        .hero::after,
+        .container::before,
+        .container::after {
+            display: none !important;
+            content: "" !important;
+            visibility: hidden !important;
+        }
+
+        /* Force clean layout */
         .hero {
             background: linear-gradient(135deg, #ffffff 0%, #f8f9fa 100%);
             color: #333;
             padding: 40px 0 120px;
             text-align: center;
+            overflow: hidden;
+            position: relative;
+            z-index: 1;
         }
 
         .hero h1 {
@@ -653,8 +693,17 @@
             .menu-item:nth-child(1) { animation: slideInRight 0.3s ease forwards; animation-delay: 0.1s; }
             .menu-item:nth-child(2) { animation: slideInRight 0.3s ease forwards; animation-delay: 0.2s; }
 
+            .container {
+                padding: 0 15px;
+            }
+
             .hero {
                 padding: 20px 0 60px;
+            }
+
+            .hero img {
+                width: 280px !important;
+                margin: 2rem auto 4rem !important;
             }
 
             .hero h1 {
