--- a/index.html
+++ b/index.html
@@ -869,7 +869,7 @@
             <div class="container">
                 <div class="contact-content">
                     <div class="contact-info" style="width: 100%; text-align: center;">
-                        <a href="tel:+966565641991" class="cta-button">
+                        <a href="https://wa.me/966504761352" target="_blank" class="cta-button">
                             <i class="fas fa-phone"></i>
                         </a>
                     </div>
